# nonlocal

./: .ai-review.yaml  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  conanfile.txt  make.sh  my_thermal_nonstationary_1d.json  run.sh  script.bash  tests.sh  visualization.m
MPIversion/: CMakeLists.txt
MPIversion/include/mesh/: CMakeLists.txt  mesh.hpp  mesh_2d.hpp  mesh_info.hpp  save_results.hpp  su2_parser.hpp
MPIversion/include/solvers/: CMakeLists.txt  finite_element_solver_base.hpp  heat_equation_solution.hpp  heat_equation_solver.hpp  influence_functions.hpp  right_part.hpp  structural_solution.hpp  structural_solver.hpp  utils.hpp
MPIversion/src/: main.cpp  structural.cpp  structural_long_rect.cpp  structural_long_rect_with_T.cpp  thermal.cpp
NonLocFEM/: CMakeLists.txt  determine_problem.cpp  determine_problem.hpp  main.cpp  mechanical_problems_2d.hpp  problems_utils.hpp  save_results.hpp  thermal_problems_1d.hpp  thermal_problems_2d.hpp
NonLocFEM/config/: config_utils.cpp  read_mechanical_boundary_conditions.hpp  read_mechanical_parameters.cpp  read_mechanical_parameters.hpp  read_mesh.hpp  read_mesh_1d.cpp  read_mesh_1d.hpp  read_model.cpp  read_model.hpp  read_thermal_boundary_conditions.hpp  read_thermal_parameters.hpp  save_data.cpp  save_data.hpp  task_data.cpp
include/MPI_utils/: CMakeLists.txt  MPI_utils.cpp  MPI_utils.hpp
include/metamath/: CMakeLists.txt  README.MD  metamath.hpp
include/metamath/constants/: CMakeLists.txt  constants.hpp  multinomial.hpp  prime_number.hpp
include/metamath/finite_element/: CMakeLists.txt  element_1d.hpp  element_1d_integrate.hpp  element_2d.hpp  element_2d_integrate.hpp  element_2d_serendipity.hpp  element_base.hpp  element_integrate_base.hpp  finite_element.hpp  quadrature.hpp
include/metamath/functions/: chebyshev.hpp  (+7 more)
include/solvers/: CMakeLists.txt  equation_parameters.hpp  finite_element_routine.hpp  finite_element_solver_base.hpp  heat_equation_parameters.hpp  heat_equation_solution.hpp  heat_equation_solver.hpp  influence_functions.hpp  right_partition.hpp  solvers_constants.hpp  solvers_utils.hpp  static_equation_solver.hpp  structural_solution.hpp  structural_solver.hpp  thermomechanical_equation_solver.hpp
libraries/: CMakeLists.txt
libraries/config/: CMakeLists.txt  boundaries_conditions_data.hpp  config_utils.cpp  config_utils.hpp  constant_converters.hpp  general_config_data.cpp  general_config_data.hpp  general_config_data_impl.hpp  influence_data.hpp  material_data.hpp  materials_data.cpp  materials_data.hpp  mechanical_boundary_condition_data.hpp  mechanical_material_data.hpp  mesh_data.cpp  mesh_data.hpp  model_data.hpp  nonlocal_config.hpp  read_coefficient.hpp  read_influence.hpp  read_mechanical_boundary_conditions.hpp  read_mechanical_parameters.cpp  read_mechanical_parameters.hpp  read_mesh.cpp  read_mesh.hpp  read_model.cpp  read_model.hpp  read_thermal_boundary_conditions.hpp  read_thermal_parameters.hpp  save_data.cpp  save_data.hpp  task_data.cpp  task_data.hpp  thermal_auxiliary_data.hpp  thermal_boundary_condition_data.hpp  thermal_config_data.hpp  thermal_config_data_impl.hpp  thermal_equation_data.hpp  thermal_material_data.hpp  time_data.hpp
libraries/constants/: CMakeLists.txt  nonlocal_constants.hpp
libraries/json_parser/: CMakeLists.txt  config_utils.cpp  config_utils.hpp  general_config_data.cpp  general_config_data.hpp  json_parser.cpp  json_parser.hpp  parse_thermal_1d.cpp  parse_thermal_1d.hpp  thermal_config_data.cpp  thermal_config_data.hpp
libraries/logger/: CMakeLists.txt  logger.cpp  logger.hpp
libraries/math_expression/: CMakeLists.txt  README.md  math_expression.cpp  math_expression.hpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
libraries/mesh/: CMakeLists.txt
libraries/metamath/: CMakeLists.txt  metamath.hpp
libraries/parallel/: CMakeLists.txt  MPI_utils.cpp  MPI_utils.hpp  OMP_utils.cpp  OMP_utils.hpp  uniform_ranges.cpp  uniform_ranges.hpp  unrelated_rows.hpp
libraries/parallel_utils/: CMakeLists.txt  MPI_utils.cpp  MPI_utils.hpp  OMP_utils.cpp  OMP_utils.hpp  init_uniform_ranges.cpp  init_uniform_ranges.hpp  uniform_ranges.cpp  uniform_ranges.hpp  unrelated_rows.hpp
libraries/solvers/: CMakeLists.txt  equation_parameters.hpp  solvers_constants.hpp  solvers_utils.hpp
sandbox/: CMakeLists.txt  nonlocal_sandbox.cpp
tests/: CMakeLists.txt  nonlocal_tests.cpp
tests/config/: CMakeLists.txt  config.cpp  config_test_types.hpp  double_conversion.cpp  double_conversion.json  required_fields.cpp  required_fields.json  reverse_conversion.cpp  reverse_conversion.json  save_fields.cpp  save_fields.json  test_config.json  test_exceptions.cpp  test_exceptions.json  test_utils.cpp  test_utils.json  tests_config_utils.hpp
tests/embedded/: mesh.json
tests/finite_elements/: CMakeLists.txt  basises.cpp  element_1d.cpp  element_1d_test.cpp  element_2d_test.cpp  elements.cpp  init_element.cpp  init_element.hpp  init_elements.hpp  init_lagrangian_elements_1d.cpp  init_lagrangian_elements_2d.cpp  init_serendipity_elements_2d.cpp  init_triangle_elements_2d.cpp  quadratures.cpp  quadratures_test.cpp
tests/math_expression_tests/: CMakeLists.txt  math_expression_t.cpp  math_expression_test.cpp
tests/metamath/: CMakeLists.txt  power.cpp
tests/nonstationary_thermal_1d/: CMakeLists.txt  boundary_conditions_1d.cpp  flux_relaxation.cpp  make_element_1d.hpp  nonstationary_tests_1d.hpp  problems_utils.hpp
tests/parallel/: CMakeLists.txt  uniform_ranges_test.cpp
tests/parallel_utils/: CMakeLists.txt  init_uniform_ranges_test.cpp  uniform_ranges.cpp  uniform_ranges_test.cpp
tests/parser_tests/: CMakeLists.txt  parser_t.cpp
tests/solvers_2d/: CMakeLists.txt
tests/stationary_thermal_1d/: CMakeLists.txt  boundary_conditions_1d.cpp
tests/stationary_thermal_2d/: CMakeLists.txt  boundary_conditions_2d.cpp  init_2d_mesh.cpp  init_2d_mesh.hpp
tests/test_template/: CMakeLists.txt  test_template.cpp
tests/thermal_1d/: CMakeLists.txt  flux_relaxation.cpp  nonstationary.cpp  stationary.cpp  utils.hpp
tests/utils/: CMakeLists.txt  error.hpp
(+728 files in other folders)
